--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "grunt": "^0.4.5",
     "grunt-browser-sync": "^2.0.0",
     "grunt-combine-media-queries": "^1.0.19",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-less": "^1.1.0",
+    "grunt-contrib-uglify": "^0.11.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-include-replace": "^3.2.0",
     "grunt-postcss": "^0.7.1",
