--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ root = true
 
 [*]
 charset = utf-8
-indent_style = space
+indent_style = tabs
 indent_size = 2
 end_of_line = lf
 trim_trailing_whitespace = true
